--- a/src/e_cidadania/static_files/css/screen.css
+++ b/src/e_cidadania/static_files/css/screen.css
@@ -303,12 +303,12 @@ footer {
     margin-bottom: 5px;
 }
 
-#proposalmap .map {
+.map {
     width: 400px;
     height: 350px;
 }
 
-#proposalmap .map img {
+.map img {
     max-width:none;
 }
 /* END PROPOSAL STYLES */
