--- a/src/core/spaces/templates/spaces/space_index.html
+++ b/src/core/spaces/templates/spaces/space_index.html
@@ -78,50 +78,62 @@
                             {% if get_place.mod_news %}
                                 <h6>{% trans "News"%}</h6>
                                 <ul class="unstyled">
-                                    {% for news in publication %}
+                                    {% for news in publication|slice:":3" %}
                                         <li><a href="{% url 'profile_public' news.author %}">{{ news.author }}</a> {% trans "posted" %} <a href="{{ news.get_absolute_url }}">{{ news.post_title }}</a> {% trans "on" %} {{ news.pub_date|date:"d F Y" }}</li>
                                     {% empty %}
                                         <li>{% trans "Nothing published yet." %}</li>
                                     {% endfor %}
+                                    {% if publication %}
+                                        <li><a href="{% url 'list-space-news' get_place.url %}">{% trans "more..." %}</a></li>
+                                    {% endif %}
                                 </ul>
                             {% endif %}
 
                             {% if get_place.mod_debate %}
                                 <h6>{% trans "Debates" %}</h6>
                                 <ul class="unstyled">
-                                    {% for debate in debates %}
+                                    {% for debate in debates|slice:":3" %}
                                         <li><a href="{% url 'profile_public' debate.author %}">{{ debate.author }}</a> {% trans "created debate" %} <a href="{{ debate.get_absolute_url }}">{{ debate.title }}</a> {% trans "on" %} {{ debate.date|date:"d F Y" }}</li>
                                     {% empty %}
                                         <li>{% trans "No debates started." %}</li>
                                     {% endfor %}
+                                    {% if debates %}
+                                        <li><a href="{% url 'list-debates' get_place.url %}">{% trans "more..." %}</a></li>
+                                    {% endif %}
                                 </ul>
                             {% endif %} 
 
                             {% if get_place.mod_proposals %}
                                 <h6>{% trans "Proposals" %}</h6>
                                 <ul class="unstyled">
-                                    {% for proposal in proposals %}
+                                    {% for proposal in proposals|slice:":3" %}
                                         <li><a href="{% url 'profile_public' proposal.author %}">{{ proposal.author }}</a> {% trans "proposed" %} <a href="{{ proposal.get_absolute_url }}">{{ proposal.title }}</a> {% trans "on" %} {{ proposal.pub_date|date:"d F Y" }}</li>
                                     {% empty %}
                                         <li>{% trans "No proposals available." %}</li>
-                                    {% endfor %} 
+                                    {% endfor %}
+                                    {% if proposals %}
+                                        <li><a href="{% url 'list-proposals' get_place.url %}">{% trans "more..." %}</a></li>
+                                    {% endif %}
                                 </ul>
                             {% endif %}
                             
                             {% if get_place.mod_cal %}
                                 <h6>{% trans "Events" %}</h6>
                                 <ul class="unstyled">
-                                    {% for m in event %}
+                                    {% for m in event|slice:":3" %}
                                         <li><a href="{{ m.get_absolute_url }}">{{ m.title }}</a> {% trans "on" %} {{ m.event_date|date:"d F Y" }}</li>
                                     {% empty %}
                                         <li>{% trans "No events registered." %}</li>
                                     {% endfor %}
+                                    {% if event %}
+                                        <li><a href="{% url 'list-events' get_place.url %}">{% trans "View all events" %}</a></li>
+                                    {% endif %}
                                 </ul>
                             {% endif %}
                             {% if get_place.mod_voting %}
                                 <h6>{% trans "Polls" %}</h6>
                                 <ul class="unstyled">
-                                    {% for p in polls %}
+                                    {% for p in polls|slice:":3" %}
                                         <li><a href="{% url 'view-poll' get_place.url p.id %}">{{ p.question }}</a> {% trans "on" %} {{ p.pub_date|date:"d F Y" }}</li>
                                     {% empty %}
                                         <li>{% trans "No events registered." %}</li>
@@ -440,7 +452,6 @@
                     </div>
                 </div>
                 {% endif %}
-                
                 
                 <div class="tab-pane" id="events">
                     <div class="row">
