select all option

--- a/static/themes/default/style.css
+++ b/static/themes/default/style.css
@@ -178,3 +178,8 @@ div.question-container {
     overflow: auto;
 }
 
+/* Translation Functionality */
+
+table.translation_module_table {
+   width : 55%;
+}
