--- a/src/core/spaces/templates/spaces/space_index.html
+++ b/src/core/spaces/templates/spaces/space_index.html
@@ -15,7 +15,7 @@
     <div class="row">
         <div class="span12">
             <ul class="nav nav-tabs">
-                <li class="active"><a href="#overview" data-toggle="tab">{% trans "Overview" %}</a></li>
+                <li class="e"><a href="#overview" data-toggle="tab">{% trans "Overview" %}</a></li>
                 {% if get_place.mod_news %}
                     <li><a href="#news" data-toggle="tab">{% trans "News" %}</a></li>
                 {% endif %}
@@ -141,7 +141,11 @@
                                 </ul>
                                 <h6>{% trans "Votings" %}</h6>
                                 <ul class="unstyled">
-                                    <li>nothing at this moment. Not implemented!</li>
+                                    {% for v in votings %}
+                                        <li><a href="#">{{ v.title }}</a> {% trans "on" %} {{ p.pub_date|date:"d F Y" }}</li>
+                                    {% empty %}
+                                        <li>{% trans "There are no votings." %}</li>
+                                    {% endfor %}
                                 </ul>
                             {% endif %}
                         </div>
