Fixed the poll detail template style

--- a/src/apps/ecidadania/voting/templates/voting/poll_detail.html
+++ b/src/apps/ecidadania/voting/templates/voting/poll_detail.html
@@ -29,19 +29,25 @@
         <a class="brand" href="{% url 'site-index' %}">e-cidadania</a>
     {% endif %}
 {% endblock %}
+
 {% block content %}
-<h1 class="poll_question">{{ poll.question }}</h1>
-<h5 class="poll_info">{% trans "Created by:" %}{{ poll.author }}</h5>
-<h5 class="poll_info">{% trans "Created on:" %}{{ poll.pub_date }}</h5>
+    <div class="row">
+        <div class="span12">
+            <h1 class="poll_question">{{ poll.question }}</h1>
+            <h5 class="poll_info">{% trans "Created by:" %}{{ poll.author }}</h5>
+            <h5 class="poll_info">{% trans "Created on:" %}{{ poll.pub_date }}</h5>
 
-{% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
-
-<div class="poll_detail"><form action="{{ get_place.get_absolute_url }}vote/" method="post">
-{% csrf_token %}
-{% for choice in poll.choice_set.all %}
-    <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}" />
-    <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label><br />
-{% endfor %}
-<input class="btn btn-small btn-primary" type="submit" value="{% trans "Vote" %}" />
-</form></div>
+            {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
+                <div class="poll_detail">
+                    <form action="{{ get_place.get_absolute_url }}vote/" method="post">
+                        {% csrf_token %}
+                        {% for choice in poll.choice_set.all %}
+                            <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}" />
+                            <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label><br />
+                        {% endfor %}
+                        <input class="btn btn-small btn-primary" type="submit" value="{% trans "Vote" %}" />
+                    </form>
+                </div>
+        </div>
+    </div>
 {% endblock %}
