Fixed #208 and some other stuff

--- a/src/apps/ecidadania/debate/templates/debate/debate_view.html
+++ b/src/apps/ecidadania/debate/templates/debate/debate_view.html
@@ -140,6 +140,7 @@
                     </div>
                     <div class="modal-body">
                         <p id="view-note-desc"></p>
+                        <p id="view-note-author"></p>
                     </div>
                     <div class="modal-footer">
                     </div>
