--- a/src/extras/custom_stuff/templates/wysihtml5_instance.html
+++ b/src/extras/custom_stuff/templates/wysihtml5_instance.html
@@ -3,5 +3,5 @@
 			custom_templates.enable('{{ editor_name }}', '{{ field_id }}', config);
 </script>
 <script>
-	$('#{{field_id}}').wysihtml5();
+	var wysieditor = $('#{{field_id}}').wysihtml5();
 </script>
