--- a/src/apps/ecidadania/debate/templates/debate/debate_view.html
+++ b/src/apps/ecidadania/debate/templates/debate/debate_view.html
@@ -131,6 +131,7 @@
                     </div>
                     <div class="modal-footer">
                         <a href="#" onclick="saveNote()" class="btn btn-primary">{% trans "Save" %}</a>
+                        <a href="#" onclick="saveNote()" class="btn btn-primary">{% trans "Save" %}</a>
                     </div>
                 </div>
 
@@ -140,25 +141,20 @@
                         <h3 id="view-note-title"></h3>
                     </div>
                     <div class="modal-body">
-<<<<<<< Updated upstream
-                        <p id="view-note-desc"></p>
-                        <p id="view-note-author"></p>
-=======
 											<p id="view-note-desc"></p>
 											<span id="num-comments"></span>
 											<div id="comments"></div>
->>>>>>> Stashed changes
                     </div>
 										<div class="modal-footer">
-<h5 class="note-comment-title">Коментирај</h5><div id="note-comment">
+<h5 class="note-comment-title">Comment</h5><div id="note-comment">
 <form id="form_comments" action="{% comment_form_target %}" method="post">
    {% csrf_token %}
 <table>
 <tr>
      <td colspan="2">
        <div class="kopce"></div>
-       <input type="submit" name="submit" value="Прати">
-       <input type="submit" name="preview" value="Прегледај">
+       <input type="submit" name="submit" value="Submit">
+       <input type="submit" name="preview" value="Preview">
      </td>
    </tr>
 </table>
