Menu item for displaying translation percentage

--- a/views/admin/translate.html
+++ b/views/admin/translate.html
@@ -6,6 +6,7 @@
 <ul>
   <li><a href='{{=URL(c="admin", f="translate", args=["create"], vars=dict(opt="1"))}}'>{{=T("Select Modules which are to be translated")}}</a>
   <li><a href='{{=URL(c="admin", f="translate", args=["create"], vars=dict(opt="2"))}}'>{{=T("Upload the (completely or partially) translated csv file")}}</a>
+  <li><a href='{{=URL(c="admin", f="translate", args=["create"], vars=dict(opt="3"))}}'>{{=T("View the module-wise percentage of translated strings")}}</a>
 </ul>
 </p>
 </div>
