Fixed date editing on events

--- a/src/core/spaces/templates/spaces/event_form.html
+++ b/src/core/spaces/templates/spaces/event_form.html
@@ -65,7 +65,11 @@ automatically if found in the data models.
                 <label>{{ form.event_date.label }}</label>
                 <div class="controls">
                     <div class="input-append">
-                        <input type="text" name="event_date" id="datepicker" class="hasDatePicker">
+                        {% if form.title.value %}
+                            {{ form.event_date }}
+                        {% else %}
+                            <input type="text" name="event_date" id="datepicker" class="hasDatePicker">
+                        {% endif %}
                         {% if form.event_date.help_text %}
                             <span class="add-on"><a href="#" rel="tooltip" title="{{ form.event_date.help_text }}"><i class="icon-question-sign"></i></a></span>
                         {% endif %}
